Class App changes week 3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="flexbox.css" rel="stylesheet">
+    <link href="./css/flexbox.css" rel="stylesheet">
     <title>Build Fluid Layout</title>
   </head>
   <body>
@@ -42,6 +42,6 @@
     </footer> 
    </div>
   </body>
-  
-  <script src="../src/app.js"></script>
+
+  <script src="./src/app.js"></script>
 </html> 
