Class App changes week 4

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/flexbox.css" />
-    <title>Login</title>
+    <title>About</title>
   </head>
   <body>
     <div class="main wrapper">
@@ -20,19 +20,7 @@
 
       <div class="content">
         <div class="center">
-          <h2>Login</h2>
-          <form novalidate>
-            <label for="username">
-              <span>Username:</span>
-              <input id="username" type="text" placeholder="Username" />
-            </label>
-            <label for="password">
-              <span>Password:</span>
-              <input id="password" type="password" placeholder="Password" />
-            </label>
-            <button onclick="doLogin(event)">Submit</button>
-            <a href="./register.html">Register</a>
-          </form>
+          <h2>Some stuff about a site.</h2>
         </div>
       </div>
 
@@ -47,7 +35,4 @@
       </footer>
     </div>
   </body>
-  <script src="./src/service-helpers.js"></script>
-  <script src="./src/auth.service.js"></script>
-  <script src="./src/app.js"></script>
 </html>
