Class app changes week 5

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/flexbox.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>Login</title>
   </head>
   <body>
@@ -12,42 +13,20 @@
       <header>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
+            <li class="nav-item"><a href="/">Home</a></li>
+            <li class="nav-item"><a href="./about.html">About</a></li>
           </ul>
+          <a id="login" href="/login.html">Login</a>
         </nav>
       </header>
 
       <div class="content">
-        <div class="center">
-          <h2>Login</h2>
-          <form novalidate>
-            <label for="username">
-              <span>Username:</span>
-              <input id="username" type="text" placeholder="Username" />
-            </label>
-            <label for="password">
-              <span>Password:</span>
-              <input id="password" type="password" placeholder="Password" />
-            </label>
-            <button onclick="doLogin(event)">Submit</button>
-            <a href="./register.html">Register</a>
-          </form>
-        </div>
+        <h2>Welcome to a really basic app!</h2>
       </div>
 
       <footer>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-          </ul>
-        </nav>
-        <p>Author: <a href = "https://github.com/snowbrd1">Brian H.</a></p>
+        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
       </footer>
     </div>
   </body>
-  <script src="./src/service-helpers.js"></script>
-  <script src="./src/auth.service.js"></script>
-  <script src="./src/app.js"></script>
 </html>
