--- a/login.html
+++ b/login.html
@@ -6,37 +6,33 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/flexbox.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
     <div class="main wrapper">
       <header>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
+            <li class="nav-item"><a href="/">Home</a></li>
+            <li class="nav-item"><a href="./about.html">About</a></li>
           </ul>
         </nav>
       </header>
 
       <div class="content">
         <div class="center">
-          <h2>Register</h2>
+          <h2>Login</h2>
           <form novalidate>
             <label for="username">
               <span>Username:</span>
               <input id="username" type="text" placeholder="Username" />
             </label>
-            <label for="email">
-              <span>Email:</span>
-              <input id="email" type="email" placeholder="Email" />
-            </label>
             <label for="password">
               <span>Password:</span>
               <input id="password" type="password" placeholder="Password" />
             </label>
-            <button onclick="doRegister(event)">Register</button>
-            <a href="/">Already signed up?</a>
+            <button onclick="doLogin(event)">Submit</button>
+            <a href="./register.html">Register</a>
           </form>
         </div>
       </div>
@@ -45,6 +41,7 @@
         <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
       </footer>
     </div>
+    <script src="./src/api.config.js"></script>
     <script src="./src/simple-storage.js"></script>
     <script src="./src/service-helpers.js"></script>
     <script src="./src/auth.service.js"></script>
