--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/flexbox.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>About</title>
   </head>
   <body>
@@ -15,6 +16,10 @@
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About</a></li>
           </ul>
+          <div>
+            <a id="login" href="/login.html">Login</a>
+            <a id="logout" href="" onclick="doLogout(event)">Logout</a>
+          </div>
         </nav>
       </header>
 
@@ -25,14 +30,14 @@
       </div>
 
       <footer>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-          </ul>
-        </nav>
-        <p>Author: <a href = "https://github.com/snowbrd1">Brian H.</a></p>
+        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
       </footer>
     </div>
+    <script src="./src/api.config.js"></script>
+    <script src="./src/simple-storage.js"></script>
+    <script src="./src/simple-storage.js"></script>
+    <script src="./src/service-helpers.js"></script>
+    <script src="./src/auth.service.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
