--- a/home.html
+++ b/home.html
@@ -5,35 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/flexbox.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Home</title>
   </head>
   <body>
     <div class="main wrapper">
       <header>
         <nav>
-          <ul>
+          <ul class="nav-list">
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About</a></li>
           </ul>
-          <a href="" onclick="doLogout(event)">Logout</a>
+          <div>
+            <a id="login" href="/login.html">Login</a>
+            <a id="logout" href="" onclick="doLogout(event)">Logout</a>
+          </div>
         </nav>
       </header>
 
       <div class="content">
-        <div class="center">
-          <h2>Some stuff about a site.</h2>
+        <div id="employees">
+          <div>Loading...</div>
         </div>
       </div>
 
       <footer>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-          </ul>
-        </nav>
-        <p>Author: <a href = "https://github.com/snowbrd1">Brian H.</a></p>
+        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
       </footer>
     </div>
+    <script src="./src/api.config.js"></script>
+    <script src="./src/simple-storage.js"></script>
+    <script src="./src/service-helpers.js"></script>
+    <script src="./src/auth.service.js"></script>
+    <script src="./src/employees.service.js"></script>
+    <script src="./src/route-guard.js"></script>
+    <script src="./src/build-employees-list.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
