--- a/index.html
+++ b/index.html
@@ -3,30 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <title>Login</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link 
+    rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+    crossorigin="anonymous">
+  
+    <title>Hello! Brian's Employee List App</title>
   </head>
   <body>
-    <div class="main wrapper">
-      <header>
-        <nav>
-          <ul>
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="./about.html">About</a></li>
-          </ul>
-          <a id="login" href="/login.html">Login</a>
-        </nav>
-      </header>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+        </ul>
+        <a id="login" href="/login.html">Sign In</a>
+      </nav>
+    </header>
 
-      <div class="content">
-        <h2>Welcome to a really basic app!</h2>
+    <div class="container-fluid">
+      <div class="center">
+        <h2>Welcome to Brian's Employee List App!</h2>
       </div>
-
-      <footer>
-        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
-      </footer>
     </div>
+
+    <footer>
+      <div class="author">
+        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
+      </div>
+    </footer>
   </body>
 </html>
