Class app changes Week 7

--- a/login.html
+++ b/login.html
@@ -3,48 +3,114 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
-    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link 
+      rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
     <title>Login</title>
-  </head>
-  <body>
-    <div class="main wrapper">
-      <header>
-        <nav>
-          <ul>
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="./about.html">About</a></li>
-          </ul>
-        </nav>
-      </header>
-
-      <div class="content">
-        <div class="center">
-          <h2>Login</h2>
-          <form novalidate>
-            <label for="username">
-              <span>Username:</span>
-              <input id="username" type="text" placeholder="Username" />
-            </label>
-            <label for="password">
-              <span>Password:</span>
-              <input id="password" type="password" placeholder="Password" />
-            </label>
-            <button onclick="doLogin(event)">Submit</button>
-            <a href="./register.html">Register</a>
-          </form>
-        </div>
-      </div>
+      </head>
+        <body>
+          <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="#"></a>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+              </ul>
+              <a id="login" href="/login.html">Sign In</a>
+            </nav>
+          </header>
+      
+          <div class="center">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-split">
+                  <div class="right-border">
+                    <h2 class="card-title">Sign In</h2>
+                    <form novalidate>
+                      <div class="form-group">
+                        <label for="formInputUsername">Username</label>
+                        <input
+                          id="formInputUsername"
+                          type="text"
+                          class="form-control"
+                        />
+                      </div>
+                      <div class="form-group">
+                        <label for="formInputPassword">Password</label>
+                        <input
+                          id="formInputPassword"
+                          type="password"
+                          class="form-control"
+                        />
+                      </div>
+                      <div class="form-group form-group-btn">
+                        <button class="btn btn-primary" onclick="doLogin(event)">
+                          Sign In
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+      
+                  <div class="left-border">
+                    <h2 class="card-title">Register</h2>
+                    <form novalidate>
+                      <div class="form-group">
+                        <label for="formInputUsernameReg">Username</label>
+                        <input
+                          id="formInputUsernameReg"
+                          type="text"
+                          class="form-control"
+                          placeholder="newusername"
+                        />
+                      </div>
+                      <div class="form-group">
+                        <label for="formInputPasswordReg">Password</label>
+                        <input
+                          id="formInputPasswordReg"
+                          type="password"
+                          class="form-control"
+                          placeholder="newuserpassword"
+                        />
+                      </div>
+                      <div class="form-group">
+                        <label for="formInputEmailReg">Email</label>
+                        <input
+                          id="formInputEmailReg"
+                          type="email"
+                          class="form-control"
+                          placeholder="newuser@email.com"
+                        />
+                      </div>
+                      <div class="form-group">
+                        <button class="btn btn-primary" onclick="doRegister(event)">
+                          Sign Up
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
       <footer>
-        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
+        <div class="author">
+          <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
+        </div>
       </footer>
-    </div>
-    <script src="./src/api.config.js"></script>
-    <script src="./src/simple-storage.js"></script>
-    <script src="./src/service-helpers.js"></script>
-    <script src="./src/auth.service.js"></script>
-    <script src="./src/app.js"></script>
+    <script src="./lib/api.config.js"></script>
+    <script src="./lib/simple-storage.js"></script>
+    <script src="./lib/service-helpers.js"></script>
+    <script src="./lib/auth.service.js"></script>
+    <script src="./lib/auth.js"></script>
   </body>
 </html>
