--- a/about.html
+++ b/about.html
@@ -3,41 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
-    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link
+          rel="stylesheet" 
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+          crossorigin="anonymous">
+
     <title>About</title>
   </head>
   <body>
-    <div class="main wrapper">
-      <header>
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-          </ul>
-          <div>
-            <a id="login" href="/login.html">Login</a>
-            <a id="logout" href="" onclick="doLogout(event)">Logout</a>
-          </div>
-        </nav>
-      </header>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+        </ul>
+        <a id="login" href="/login.html">Sign In</a>
+        <a id="logout" href="" onclick="doLogout(event)">Logout</a>
+      </nav>
+    </header>
 
-      <div class="content">
-        <div class="center">
-          <h2>Some stuff about a site.</h2>
-        </div>
+    <div class="content">
+      <div class="center">
+        <h2>The amazing new site that helps employers keep track of their employees.</h2>
       </div>
-
-      <footer>
-        <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
-      </footer>
     </div>
-    <script src="./src/api.config.js"></script>
-    <script src="./src/simple-storage.js"></script>
-    <script src="./src/simple-storage.js"></script>
-    <script src="./src/service-helpers.js"></script>
-    <script src="./src/auth.service.js"></script>
-    <script src="./src/app.js"></script>
+
+    <footer>
+      <p>Author: <a href="https://github.com/snowbrd1">Brian H</a></p>
+    </footer>
+    <script src="./lib/api.config.js"></script>
+    <script src="./lib/simple-storage.js"></script>
+    <script src="./lib/service-helpers.js"></script>
+    <script src="./lib/auth.service.js"></script>
+    <script src="./lib/auth.js"></script>
   </body>
 </html>
