Class app changes Week 8

--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
                 </li>
               </ul>
               <a id="login" href="/login.html">Sign In</a>
+              <a id="logout" href="" onclick="doLogout(event)">Logout</a>
             </nav>
           </header>
       
@@ -112,6 +113,8 @@
     <script src="./lib/simple-storage.js"></script>
     <script src="./lib/service-helpers.js"></script>
     <script src="./lib/auth.service.js"></script>
+    <script src="./lib/user-api.service.js"></script>
     <script src="./lib/auth.js"></script>
+    <script src="./lib/auth.guard.js"></script>
   </body>
 </html>
