--- a/newhire/newhire.html
+++ b/newhire/newhire.html
@@ -24,8 +24,12 @@
           <li class="nav-item">
             <a class="nav-link" href="./about.html">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../settings/settings.html">Settings</a>
+          </li>
         </ul>
         <a id="logout" href="" onclick="doLogout(event)">Logout</a>
+          <div class="header-extras" id="header-username"></div>
       </nav>
     </header>
 
@@ -89,6 +93,7 @@
     <script src="../lib/simple-storage.js"></script>
     <script src="../lib/service-helpers.js"></script>
     <script src="../lib/auth.service.js"></script>
+    <script src="../lib/user-api.service.js"></script>
     <script src="../lib/auth.js"></script>
     <script src="../lib/auth.guard.js"></script>
     <script src="./employees-api.service.js"></script>
